<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:padding="16dp"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/app_icon"
        android:paddingTop="8dp"
        android:contentDescription="@string/profile_avatar_description" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="8dp"
        android:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>